Fixed play button Fixed Safari height issue when JJ text is open Fixed menu items being in a column when on mobile.

--- a/public/styles/grid.css
+++ b/public/styles/grid.css
@@ -154,11 +154,3 @@
         display: none;
     }
 }
-@media (max-width: 768px) and (min-width: 320px){
-.info-panel nav {
-    display: flex;
-    flex-wrap: wrap;
-    flex-flow: row;
-    align-items: flex-start;
-    }
-}
